--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
 <h1>
 <body>
   <p>
+     On the distant planet of Devaron, the last known temple of the original Jedi order is discovered by a race of gallus
   </p>
-  
+  <p>
+    
+   
   
   
   
